# Disruptor-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Disruptor-all.sln  Disruptor-lib.sln  Disruptor.PerfTests.Results.txt  Disruptor.cmake  README.md  appveyor.yml  boost.props  conanfile.txt  gmock.props
CMake/: BoostTest.cmake  BoostTestDiscoverTests.cmake
Disruptor/: AggregateEventHandler.h  AlertException.h  ArgumentException.h  ArgumentNullException.h  ArgumentOutOfRangeException.h  BasicExecutor.cpp  BasicExecutor.h  BatchEventProcessor.h  BlockingQueue.h  BlockingWaitStrategy.cpp  BlockingWaitStrategy.h  BuildConfig.h  BusySpinWaitStrategy.cpp  BusySpinWaitStrategy.h  CMakeLists.txt  ClockConfig.h  ConsumerRepository.h  Disruptor.h  Disruptor.vcxproj  Disruptor.vcxproj.filters  EventHandlerGroup.h  EventPoller.h  EventProcessorInfo.h  ExceptionBase.h  ExceptionHandlerSetting.h  ExceptionHandlerWrapper.h  FatalException.h  FatalExceptionHandler.h  FixedSequenceGroup.cpp  FixedSequenceGroup.h  IConsumerInfo.h  ICursored.h  IDataProvider.h  IEventHandler.h  IEventProcessor.h  IEventProcessorFactory.h  IEventProcessorSequenceAware.h  IEventReleaseAware.h  IEventReleaser.h  IEventSequencer.h  (+68 more)
Disruptor.PerfTests/: CMakeLists.txt  Disruptor.PerfTests.vcxproj  Disruptor.PerfTests.vcxproj.filters  EventCountingQueueProcessor.cpp  EventCountingQueueProcessor.h  EventCountingWorkHandler.cpp  EventCountingWorkHandler.h  ExecutorService.h  FizzBuzzEvent.cpp  FizzBuzzEvent.h  FizzBuzzEventHandler.cpp  FizzBuzzEventHandler.h  FizzBuzzStep.h  FunctionEvent.cpp  FunctionEvent.h  FunctionEventHandler.cpp  FunctionEventHandler.h  FunctionStep.h  ILatencyTest.h  IThroughputTest.h  LatencyTestSession.cpp  LatencyTestSession.h  LatencyTestSessionResult.cpp  LatencyTestSessionResult.h  LongArrayEventHandler.cpp  LongArrayEventHandler.h  MultiBufferBatchEventProcessor.h  MutableLong.cpp  MutableLong.h  OneToOneRawBatchThroughputTest.cpp  OneToOneRawBatchThroughputTest.h  OneToOneRawThroughputTest.cpp  OneToOneRawThroughputTest.h  OneToOneSequencedBatchThroughputTest.cpp  OneToOneSequencedBatchThroughputTest.h  OneToOneSequencedLongArrayThroughputTest.cpp  OneToOneSequencedLongArrayThroughputTest.h  OneToOneSequencedPollerThroughputTest.cpp  OneToOneSequencedPollerThroughputTest.h  OneToOneSequencedThroughputTest.cpp  (+45 more)
Disruptor.TestTools/: BoostTestOptions.h  CMakeLists.txt  CountdownEvent.cpp  CountdownEvent.h  Disruptor.TestTools.vcxproj  Disruptor.TestTools.vcxproj.filters  DurationHumanizer.h  DurationUnit.h  HumanNumberFacet.h  LatencyRecorder.cpp  LatencyRecorder.h  ManualResetEvent.cpp  ManualResetEvent.h  ResetEvent.cpp  ResetEvent.h  ScopeExitFunctor.cpp  ScopeExitFunctor.h  Stopwatch.cpp  Stopwatch.h  stdafx.cpp  stdafx.h
Disruptor.Tests/: AggregateEventHandlerTests.cpp  AggregateEventHandlerTestsFixture.cpp  AggregateEventHandlerTestsFixture.h  AtomicReference.h  BatchEventProcessorTests.cpp  BatchEventProcessorTestsFixture.cpp  BatchEventProcessorTestsFixture.h  BatchHandlerMock.h  BatchingTests.cpp  BusySpinWaitStrategyTests.cpp  CMakeLists.txt  ConsumerRepositoryTests.cpp  ConsumerRepositoryTestsFixture.cpp  ConsumerRepositoryTestsFixture.h  DataProviderMock.h  DelayedEventHandler.cpp  DelayedEventHandler.h  Disruptor.Tests.vcxproj  Disruptor.Tests.vcxproj.filters  DisruptorFixture.cpp  DisruptorFixture.h  DisruptorStressTest.cpp  DisruptorTests.cpp  DummySequenceBarrier.cpp  DummySequenceBarrier.h  EventHandlerStub.h  EventPollerTests.cpp  EventProcessorMock.h  EventPublisherTests.cpp  ExceptionHandlerMock.h  ExceptionThrowingEventHandler.cpp  ExceptionThrowingEventHandler.h  FatalExceptionHandlerTests.cpp  FixedSequenceGroupTest.cpp  IgnoreExceptionHandlerTests.cpp  LifecycleAwareEventHandlerMock.h  LifecycleAwareTests.cpp  LiteBlockingWaitStrategyTests.cpp  LiteTimeoutBlockingWaitStrategyTests.cpp  LongEvent.h  (+42 more)
cmake/: FindGMock.cmake
googletest-release-1.8.0/googlemock/msvc/2015/: gmock.vcxproj
googletest-release-1.8.0/googlemock/msvc/2017/: gmock.vcxproj
googletest-release-1.8.0/googlemock/msvc/2019/: gmock.vcxproj
msvc/: boost.props  disruptor.props
msvc/2015/: Disruptor-all.sln  Disruptor-lib.sln  Disruptor.PerfTests.vcxproj  Disruptor.TestTools.vcxproj  Disruptor.Tests.vcxproj  Disruptor.Tests.vcxproj.filters  Disruptor.vcxproj  Disruptor.vcxproj.filters
msvc/2017/: Disruptor-all.sln  Disruptor.PerfTests.vcxproj  Disruptor.TestTools.vcxproj  Disruptor.TestTools.vcxproj.filters  Disruptor.Tests.vcxproj  Disruptor.Tests.vcxproj.filters  Disruptor.vcxproj  Disruptor.vcxproj.filters
msvc/2019/: Disruptor-all.sln  Disruptor-lib.sln  Disruptor.PerfTests.vcxproj  Disruptor.PerfTests.vcxproj.filters  Disruptor.TestTools.vcxproj  Disruptor.TestTools.vcxproj.filters  Disruptor.Tests.vcxproj  Disruptor.vcxproj  Disruptor.vcxproj.filters
